--- a/example/clippedEdges.html
+++ b/example/clippedEdges.html
@@ -1,46 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>three-mesh-bvh - Clipped Edges</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>three-mesh-bvh - Clipped Edges</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="./styles.css">
 
-    <style type="text/css">
-        html, body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
-
-		#info {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			color: white;
-			font-family: monospace;
-			text-align: center;
-			padding: 5px 0;
-		}
-
-		a {
-			color: #eee;
-		}
-
+	<style type="text/css">
 		#output {
-			padding: 5px;
-			bottom: 0;
-			left: 0;
 			opacity: 0.5;
-			position: absolute;
-			color: white;
-			font-family: monospace;
 			text-align: center;
 		}
-    </style>
+	</style>
 </head>
 <body>
 	<div id="info">
