--- a/example/lineIntersection.html
+++ b/example/lineIntersection.html
@@ -1,45 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>three-mesh-bvh - Line raycasting</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>three-mesh-bvh - Line Intersection</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="./styles.css">
 
-    <style type="text/css">
-        html, body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
-
-        #info {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			color: white;
-			font-family: monospace;
-			text-align: center;
-			padding: 5px 0;
-		}
-
-		a {
-			color: #eee;
-		}
-
+	<style type="text/css">
 		#output {
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			padding: 5px;
-			color: white;
 			opacity: 0.5;
-			font-family: monospace;
 		}
-    </style>
+	</style>
 </head>
 <body>
     <div id="info">
