--- a/example/distancecast.html
+++ b/example/distancecast.html
@@ -1,30 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>three-mesh-bvh - Geometry Closest Distance</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>three-mesh-bvh - Closest Distance</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="./styles.css">
 
-    <style type="text/css">
-        html, body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
-
+	<style type="text/css">
 		#loader {
 			height: 3px;
 			position: absolute;
 			bottom: 0;
 			width: 100%;
-			background:white;
-
+			background: white;
 		}
-    </style>
+	</style>
 </head>
 <body>
 	<div id="loader"></div>
