--- a/example/sculpt.html
+++ b/example/sculpt.html
@@ -1,35 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>three-mesh-bvh - Geometry Sculpting</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-    <style type="text/css">
-        html, body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
-
-		#info {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			color: white;
-			font-family: monospace;
-			text-align: center;
-			padding: 5px 0;
-		}
-
-		a {
-			color: #eee;
-		}
-    </style>
+	<title>three-mesh-bvh - Sculpting</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 	<div id="info">
