--- a/example/objectbvh_characterMovement.html
+++ b/example/objectbvh_characterMovement.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 	<div id="info">
-		Basic character movement example. Click and drag to rotate the camera direction and use WASD to move.
+		Basic character movement example using "ObjectBVH" to represent the level objects.
+		<br/>
+		Click and drag to rotate the camera direction and use WASD to move.
 
 		<br/>
 		<br/>
