--- a/example/objectbvh_frustumCulling.html
+++ b/example/objectbvh_frustumCulling.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="info">
-		Comparison of using StaticSceneBVH for frustum culling vs built in BatchedMesh frustum culling.
+		Comparison of using ObjectBVH for scene frustum culling vs built in BatchedMesh frustum culling.
 	</div>
 	<div id="output"></div>
 	<script type="module" src="./objectbvh_frustumCulling.js"></script>
