--- a/example/objectbvh_sceneRaycast.html
+++ b/example/objectbvh_sceneRaycast.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+	<div id="info">
+		Using ObjectBVH for accelerating BatchedMesh, InstancedMesh, and object hierarchy raycasting.
+	</div>
 	<div id="output"></div>
 	<script type="module" src="./objectbvh_sceneRaycast.js"></script>
 </body>
