--- a/example/objectbvh_skinnedMeshes.html
+++ b/example/objectbvh_skinnedMeshes.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="info">
-		StaticSceneBVH construction with skinned meshes.
+		ObjectBVH construction with skinned meshes.
 	</div>
 	<script type="module" src="./objectbvh_skinnedMeshes.js"></script>
 </body>
